--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ main{
 .lessonDiv{
     width: 33.33%;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .lessonDiv .grayDiv{
@@ -229,4 +229,19 @@ footer{
     color: black;
     background-color: #FFD300;
     border-radius: 8px;
+}
+
+@media only screen and (max-device-width: 1023px) {
+    main{
+        flex-direction: column-reverse;
+    }
+    .lessonDiv{
+        width: 100%;
+        height: 50%;
+        overflow-y: auto;
+    }
+    .visualDiv{
+        width: 100%;
+        height: 50%;
+    }
 }
